--- a/scss/lg/_menu.scss
+++ b/scss/lg/_menu.scss
@@ -24,6 +24,38 @@
   }
   
   /*menu-left*/
+  .container {
+    display: inline-block;
+    cursor: pointer;
+  }
+  
+  .bar1, .bar2, .bar3 {
+    width: 30px;
+    height: 3px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+  
+  .change .bar1 {
+    transform: translate(0, 9px) rotate(-45deg);
+    -webkit-transform: translate(0, 9px) rotate(-45deg);
+    -moz-transform: translate(0, 9px) rotate(-45deg);
+    -ms-transform: translate(0, 9px) rotate(-45deg);
+    -o-transform: translate(0, 9px) rotate(-45deg);
+  }
+  
+  .change .bar2 {opacity: 0;}
+  
+  .change .bar3 {
+    transform: translate(0, -9px) rotate(45deg);
+    -webkit-transform: translate(0, -9px) rotate(45deg);
+    -moz-transform: translate(0, -9px) rotate(45deg);
+    -ms-transform: translate(0, -9px) rotate(45deg);
+    -o-transform: translate(0, -9px) rotate(45deg);
+  }
+
+
   div.menu > nav > div:nth-of-type(1) {
     display: flex;
     flex-grow: 1;
@@ -34,19 +66,13 @@
     }
     > div:nth-of-type(1) {
       padding: 10px;
-      > span:nth-of-type(1) {
-        font-size: 30px;
-        height: 80px;
+      > div.container {
         line-height: 80px;
-        font-weight: lighter;
         cursor: pointer;
         position: relative;
         top: 0;
-        &:hover {
-          font-weight: bold;
-        }
       }
-      > span:nth-of-type(2) {
+      > span:nth-of-type(1) {
         display: none !important;
         
   }
@@ -97,6 +123,125 @@
     }
     > div:nth-of-type(6) {
       display: none;
+    }
+  }
+  div.ourStory {
+    width: 100%;
+    height: 350px;
+    display: none;
+    align-items: center;
+    flex-flow: row nowrap;
+    justify-content: center;
+    z-index: 99;
+    position: absolute;
+    top: 80px;
+    background-color: white;
+    cursor: pointer;
+    > div {
+      width: 33%;
+      padding: 5px;
+      position: relative;
+      > img {
+        width: 100%;
+        height: 310px;
+      }
+      > p {
+        width: 98%;
+        text-align: center;
+        position: absolute;
+        bottom: 40%;
+        font-size: 30px;
+        color: white;
+        font-weight: bold;
+      }
+      > div.cover {
+        width: 98%;
+        height: 320px;
+        position: absolute;
+        top: 0;
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.364);
+        }
+      }
+    }
+  }
+  .activeFlex {
+    display: flex !important;
+  }
+  div.joinUs {
+    width: 100%;
+    height: 400px;
+    display: none;
+    align-items: center;
+    flex-flow: row wrap;
+    justify-content: center;
+    z-index: 99;
+    position: absolute;
+    top: 80px;
+    background-color: white;
+    cursor: pointer;
+    > div {
+      width: 50%;
+      padding: 5px;
+      position: relative;
+      transition: 400ms;
+      -webkit-transition: 400ms;
+      -moz-transition: 400ms;
+      -ms-transition: 400ms;
+      -o-transition: 400ms;
+      &:hover > div.link {
+        background-color: #cda89c;
+        border: 2px solid #cda89c;
+      }
+      &:hover > div.cover {
+        background-color: rgba(0, 0, 0, 0.485);
+      }
+      > img {
+        width: 100%;
+        height: 350px;
+      }
+      > div.link {
+        width: 200px;
+        height: 50px;
+        line-height: 50px;
+        position: absolute;
+        bottom: 40%;
+        left: 33%;
+        text-align: center;
+        color: white;
+        z-index: 999;
+        font-size: 20px;
+        font-weight: bold;
+        border: 2px solid white;
+        border-radius: 50px;
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        -ms-border-radius: 50px;
+        -o-border-radius: 50px;
+      }
+      > div.cover {
+        width: calc(100% - 10px);
+        height: 360px;
+        position: absolute;
+        top: 0;
+        transition: 300ms;
+        -webkit-transition: 300ms;
+        -moz-transition: 300ms;
+        -ms-transition: 300ms;
+        -o-transition: 300ms;
+        
+      }
+    }
+    > a {
+      width: 100%;
+      text-align: center;
+      text-decoration: underline;
+      color: rgba(0, 0, 0, 0.689);
+      font-size: 16px;
+      font-weight: bold;
+      &:hover{
+        color: rgb(180, 180, 180);
+      }
     }
   }
   
@@ -219,6 +364,10 @@
         }
       }
     }
+  }
+
+  div.divSearchMedia{
+    display: none;
   }
   
   /* js menu */
@@ -1222,30 +1371,50 @@
   div.carousel-item:nth-of-type(2) {
     background-color: #f9f7f8;
   }
-  div.carousel-item:nth-of-type(1) > img {
-    width: 60%;
-    height: 100%;
-  }
-  div.carousel-item:nth-of-type(2) > img {
-    width: 60%;
-    height: inherit;
-  }
-  div.carousel-item:nth-of-type(3) > img {
-    width: 100%;
-    height: inherit;
-  }
+  div.carousel-item:nth-of-type(1){
+    > img {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+    >img:nth-of-type(2){
+      display: none;
+    }
+
+
+  } 
+  div.carousel-item:nth-of-type(2){
+    > img {
+      width: 100%;
+      height: inherit;
+      display: block;
+    }
+    >img:nth-of-type(2){
+      display: none;
+    }
+  } 
+  div.carousel-item:nth-of-type(3){
+    > img {
+      width: 100%;
+      height: inherit;
+      display: block;
+    }
+    >img:nth-of-type(2){
+      display: none;
+    }
+  } 
   
   div.carousel-item > div.carousel-caption {
-    width: 500px;
-    height: 250px;
+    width: 40%;
+    height: auto;
     position: absolute;
-    left: 55%;
-    top: 30%;
+    left: 50%;
+    top: 25%;
     text-align: center;
-    color: black;
+    color: #808080;
   
     > h5 {
-      font-size: 18px;
+      font-size: 22px;
     }
     > p {
       font-size: 30px;
@@ -1255,8 +1424,8 @@
       width: 300px;
       height: 50px;
       line-height: 50px;
-      background-color: rgb(175, 175, 175);
-      font-size: 16px;
+      background-color: rgba(0, 0, 0, 0.581);
+      font-size: 20px;
       color: white;
       text-align: center;
       position: absolute;
@@ -1269,39 +1438,37 @@
       -ms-border-radius: 50px;
       -o-border-radius: 50px;
       &:hover {
-        background-color: rgb(227, 226, 226);
+        background-color: rgba(255, 255, 255, 0.598);
         color: black;
       }
     }
   }
   div.carousel-item:nth-of-type(3) > div.carousel-caption {
-    width: 400px;
-    height: 250px;
+    width: 40%;
+    height: auto;
     position: absolute;
-    left: 65%;
-    top: 30%;
     text-align: center;
-    color: white;
+    color: #808080;
   
     > h5 {
-      font-size: 18px;
+      font-size: 22px;
     }
     > p {
       font-size: 30px;
       font-weight: bold;
     }
     > div {
-      width: 200px;
+      width: 300px;
       height: 50px;
       line-height: 50px;
       background-color: rgba(0, 0, 0, 0.581);
-      font-size: 16px;
+      font-size: 20px;
       color: white;
       text-align: center;
       position: absolute;
       cursor: pointer;
       font-weight: bold;
-      left: calc(50% - 200px / 2);
+      left: calc(50% - 300px / 2);
       border-radius: 50px;
       -webkit-border-radius: 50px;
       -moz-border-radius: 50px;
@@ -1392,6 +1559,17 @@
         height: auto;
       }
     }
+    > div > div.fiveStar {
+      position: absolute;
+      top: 93%;
+      > span {
+        color: rgb(128, 205, 208);
+        cursor: pointer;
+      }
+      > span:nth-of-type(6) {
+        color: gray;
+      }
+    }
     > div.a {
       position: relative;
   
@@ -1457,7 +1635,6 @@
       div.img {
         > img {
           width: 93%;
-          height: 170px;
           // grid-column-start: 1;
           // grid-column-end: 2;
           border-radius: 7px;
@@ -1541,7 +1718,6 @@
       div.img {
         > img {
           width: 93%;
-          height: 170px;
           // grid-column-start: 1;
           // grid-column-end: 2;
           border-radius: 7px;
@@ -1625,7 +1801,6 @@
       div.img {
         > img {
           width: 93%;
-          height: 170px;
           // grid-column-start: 1;
           // grid-column-end: 2;
           border-radius: 7px;
@@ -1676,6 +1851,8 @@
           font-size: 14px;
           font-weight: 500;
           display: inline-block;
+          position: relative;
+          bottom: 15px;
         }
         > p:nth-of-type(3) {
           font-size: 14px;
@@ -1684,6 +1861,9 @@
           margin-left: 10px;
           text-decoration: line-through;
           color: rgb(166, 165, 165);
+          position: relative;
+          bottom: 15px;
+
         }
       }
     }
@@ -1726,6 +1906,10 @@
       }
     }
   }
+
+  div.firstOffer{
+    display: none;
+  }
   
   div.offer {
     width: 100%;
@@ -1741,6 +1925,17 @@
       > img {
         width: auto;
         height: auto;
+      }
+    }
+    > div > div.fiveStar {
+      position: absolute;
+      top: 87%;
+      > span {
+        color: rgb(128, 205, 208);
+        cursor: pointer;
+      }
+      > span:nth-of-type(6) {
+        color: gray;
       }
     }
     > div.a {
@@ -2131,19 +2326,19 @@
         > p:nth-of-type(1) {
           position: relative;
           bottom: 10%;
-          font-size: 13px;
+          font-size: 12px;
           padding-right: 5px;
         }
         > p:nth-of-type(2) {
           position: relative;
-          bottom: 4%;
+          bottom: 20px;
           font-size: 13px;
           font-weight: 600;
           display: inline-block;
         }
         > p:nth-of-type(3) {
           position: relative;
-          bottom: 4%;
+          bottom: 20px;
           font-size: 13px;
           font-weight: 400;
           display: inline-block;
@@ -2340,6 +2535,17 @@
         height: auto;
       }
     }
+    > div > div.fiveStar {
+      position: absolute;
+      top: 90%;
+      > span {
+        color: rgb(128, 205, 208);
+        cursor: pointer;
+      }
+      > span:nth-of-type(6) {
+        color: gray;
+      }
+    }
     > div.a {
       position: relative;
   
@@ -2369,7 +2575,6 @@
       > div.img {
         > img {
           width: 93%;
-          height: 170px;
           // grid-column-start: 1;
           // grid-column-end: 2;
           border-radius: 7px;
@@ -2420,6 +2625,8 @@
           font-size: 13px;
           font-weight: 500;
           display: inline-block;
+          position: relative;
+          bottom: 10px;
         }
         > p:nth-of-type(3) {
           font-size: 13px;
@@ -2428,6 +2635,8 @@
           margin-left: 10px;
           text-decoration: line-through;
           color: rgb(166, 165, 165);
+          position: relative;
+          bottom: 10px;
         }
       }
     }
@@ -2459,7 +2668,6 @@
       div.img {
         > img {
           width: 93%;
-          height: 170px;
           // grid-column-start: 1;
           // grid-column-end: 2;
           border-radius: 7px;
@@ -2510,6 +2718,8 @@
           font-size: 13px;
           font-weight: 500;
           display: inline-block;
+          position: relative;
+          bottom: 10px;
         }
       }
     }
@@ -2540,7 +2750,6 @@
       > div.img {
         > img {
           width: 93%;
-          height: 170px;
           // grid-column-start: 1;
           // grid-column-end: 2;
           border-radius: 7px;
@@ -2591,6 +2800,8 @@
           font-size: 13px;
           font-weight: 500;
           display: inline-block;
+          position: relative;
+          bottom: 10px;
         }
       }
     }
@@ -3067,62 +3278,25 @@
   
   div.images {
     width: 100%;
-    display: grid;
-    grid-template-columns: 16.5% 16.5% 16.5% 16.5% 16.5% 16.5%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
     position: relative;
-    > img:nth-of-type(1) {
-      position: absolute;
-      top: 1100px;
-      left: 8%;
-      width: 150px;
-      height: 150px;
-    }
-    > img:nth-of-type(2) {
-      position: absolute;
-      top: 1100px;
-      left: 23%;
-      width: 150px;
-      height: 150px;
-    }
-    > img:nth-of-type(3) {
-      position: absolute;
-      top: 1100px;
-      left: 38%;
-      width: 150px;
-      height: 150px;
-    }
-    > img:nth-of-type(4) {
-      position: absolute;
-      top: 1100px;
-      left: 53%;
-      width: 150px;
-      height: 150px;
-    }
-    > img:nth-of-type(5) {
-      position: absolute;
-      top: 1100px;
-      left: 68%;
-      width: 150px;
-      height: 150px;
-    }
-    > img:nth-of-type(6) {
-      position: absolute;
-      top: 1100px;
-      left: 83%;
-      width: 150px;
-      height: 150px;
+    top: 1100px;
+    > img {
+      width: 16.5%;
     }
   }
   hr.follow {
     position: relative;
-    top: 1400px;
+    top: 1200px;
     width: 100%;
     height: 10px;
     color: lightgray;
   }
   div.follow {
     position: relative;
-    top: 1450px;
+    top: 1250px;
     display: grid;
     grid-template-columns: 40% 60%;
     > div.a {
@@ -3219,7 +3393,7 @@
     width: 100%;
     height: 250px;
     position: relative;
-    top: 1650px;
+    top: 1450px;
     display: grid;
     grid-template-columns: 33% 33% 33%;
     background-color: rgb(239, 239, 239);
@@ -3290,25 +3464,28 @@
       }
     }
   }
+  div.grayMedia{
+    display: none;
+  }
   
   div.end {
     width: 100%;
-    height: 2000px;
+    height: 1750px;
     > p.end {
       position: relative;
-      top: 1700px;
+      top: 1520px;
       text-align: center;
       font-size: 12px;
     }
     > p.end2 {
       position: relative;
-      top: 1720px;
+      top: 1540px;
       text-align: center;
       font-size: 12px;
     }
     > a.end {
       position: relative;
-      top: 1700px;
+      top: 1540px;
       left: 27%;
       font-size: 12px;
       color: rgba(0, 0, 0, 0.778);
@@ -3320,7 +3497,7 @@
     }
     > a.end2 {
       position: relative;
-      top: 1700px;
+      top: 1540px;
       left: 33%;
       font-size: 12px;
       color: rgba(0, 0, 0, 0.778);
