--- a/scss/xl/_menu.scss
+++ b/scss/xl/_menu.scss
@@ -24,6 +24,39 @@ div.menu {
 }
 
 /*menu-left*/
+
+.container {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 30px;
+  height: 3px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  transform: translate(0, 9px) rotate(-45deg);
+  -webkit-transform: translate(0, 9px) rotate(-45deg);
+  -moz-transform: translate(0, 9px) rotate(-45deg);
+  -ms-transform: translate(0, 9px) rotate(-45deg);
+  -o-transform: translate(0, 9px) rotate(-45deg);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  transform: translate(0, -9px) rotate(45deg);
+  -webkit-transform: translate(0, -9px) rotate(45deg);
+  -moz-transform: translate(0, -9px) rotate(45deg);
+  -ms-transform: translate(0, -9px) rotate(45deg);
+  -o-transform: translate(0, -9px) rotate(45deg);
+}
+
+
 div.menu > nav > div:nth-of-type(1) {
   display: flex;
   flex-grow: 1;
@@ -34,19 +67,13 @@ div.menu > nav > div:nth-of-type(1) {
   }
   > div:nth-of-type(1) {
     padding: 10px;
-    > span:nth-of-type(1) {
-      font-size: 30px;
-      height: 80px;
+    > div.container {
       line-height: 80px;
-      font-weight: lighter;
       cursor: pointer;
       position: relative;
       top: 0;
-      &:hover {
-        font-weight: bold;
-      }
     }
-    > span:nth-of-type(2) {
+    > span:nth-of-type(1) {
       display: none !important;
     }
   }
@@ -96,6 +123,125 @@ div.menu > nav > div:nth-of-type(1) {
   }
   > div:nth-of-type(6) {
     display: none;
+  }
+}
+div.ourStory {
+  width: 100%;
+  height: 350px;
+  display: none;
+  align-items: center;
+  flex-flow: row nowrap;
+  justify-content: center;
+  z-index: 99;
+  position: absolute;
+  top: 80px;
+  background-color: white;
+  cursor: pointer;
+  > div {
+    width: 33%;
+    padding: 5px;
+    position: relative;
+    > img {
+      width: 100%;
+      height: 310px;
+    }
+    > p {
+      width: 98%;
+      text-align: center;
+      position: absolute;
+      bottom: 40%;
+      font-size: 30px;
+      color: white;
+      font-weight: bold;
+    }
+    > div.cover {
+      width: 98%;
+      height: 320px;
+      position: absolute;
+      top: 0;
+      &:hover {
+        background-color: rgba(0, 0, 0, 0.364);
+      }
+    }
+  }
+}
+.activeFlex {
+  display: flex !important;
+}
+div.joinUs {
+  width: 100%;
+  height: 400px;
+  display: none;
+  align-items: center;
+  flex-flow: row wrap;
+  justify-content: center;
+  z-index: 99;
+  position: absolute;
+  top: 80px;
+  background-color: white;
+  cursor: pointer;
+  > div {
+    width: 50%;
+    padding: 5px;
+    position: relative;
+    transition: 400ms;
+    -webkit-transition: 400ms;
+    -moz-transition: 400ms;
+    -ms-transition: 400ms;
+    -o-transition: 400ms;
+    &:hover > div.link {
+      background-color: #cda89c;
+      border: 2px solid #cda89c;
+    }
+    &:hover > div.cover {
+      background-color: rgba(0, 0, 0, 0.485);
+    }
+    > img {
+      width: 100%;
+      height: 350px;
+    }
+    > div.link {
+      width: 200px;
+      height: 50px;
+      line-height: 50px;
+      position: absolute;
+      bottom: 40%;
+      left: 33%;
+      text-align: center;
+      color: white;
+      z-index: 999;
+      font-size: 20px;
+      font-weight: bold;
+      border: 2px solid white;
+      border-radius: 50px;
+      -webkit-border-radius: 50px;
+      -moz-border-radius: 50px;
+      -ms-border-radius: 50px;
+      -o-border-radius: 50px;
+    }
+    > div.cover {
+      width: calc(100% - 10px);
+      height: 360px;
+      position: absolute;
+      top: 0;
+      transition: 300ms;
+      -webkit-transition: 300ms;
+      -moz-transition: 300ms;
+      -ms-transition: 300ms;
+      -o-transition: 300ms;
+      
+    }
+  }
+  > a {
+    width: 100%;
+    text-align: center;
+    text-decoration: underline;
+    color: rgba(0, 0, 0, 0.689);
+    font-size: 16px;
+    font-weight: bold;
+    &:hover{
+      color: rgb(180, 180, 180);
+    }
   }
 }
 
@@ -218,6 +364,10 @@ div.menu > nav > div:nth-of-type(3) {
       }
     }
   }
+}
+
+div.divSearchMedia{
+  display: none;
 }
 
 /* js menu */
@@ -1196,41 +1346,60 @@ div.carousel-item:nth-of-type(1) {
 div.carousel-item:nth-of-type(2) {
   background-color: #f9f7f8;
 }
-div.carousel-item:nth-of-type(1) > img {
-  width: 60%;
-  height: 100%;
+div.carousel-item:nth-of-type(1) {
+  > img {
+    width: auto;
+    height: 100%;
+    display: block;
+  }
+  > img:nth-of-type(2) {
+    display: none;
+  }
 }
-div.carousel-item:nth-of-type(2) > img {
-  width: 60%;
-  height: inherit;
+
+div.carousel-item:nth-of-type(2) {
+  > img {
+    width: 100%;
+    height: inherit;
+    display: block;
+  }
+  > img:nth-of-type(2) {
+    display: none;
+  }
 }
-div.carousel-item:nth-of-type(3) > img {
-  width: 100%;
-  height: inherit;
+div.carousel-item:nth-of-type(3) {
+  > img {
+    width: 100%;
+    height: inherit;
+    display: block;
+  }
+  > img:nth-of-type(2) {
+    display: none;
+  }
 }
 
 div.carousel-item > div.carousel-caption {
-  width: 500px;
-  height: 250px;
+  width: 40%;
+  height: auto;
   position: absolute;
-  left: 55%;
-  top: 30%;
+  left: 50%;
+  top: 25%;
   text-align: center;
-  color: black;
+  color: #808080;
 
   > h5 {
-    font-size: 18px;
+    font-size: 22px;
   }
   > p {
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
   }
   > div {
     width: 300px;
     height: 50px;
     line-height: 50px;
-    background-color: rgb(175, 175, 175);
-    font-size: 16px;
+    background-color: rgba(0, 0, 0, 0.581);
+    font-size: 20px;
     color: white;
     text-align: center;
     position: absolute;
@@ -1243,39 +1412,37 @@ div.carousel-item > div.carousel-caption {
     -ms-border-radius: 50px;
     -o-border-radius: 50px;
     &:hover {
-      background-color: rgb(227, 226, 226);
+      background-color: rgba(255, 255, 255, 0.598);
       color: black;
     }
   }
 }
 div.carousel-item:nth-of-type(3) > div.carousel-caption {
-  width: 400px;
-  height: 250px;
+  width: 40%;
+  height: auto;
   position: absolute;
-  left: 65%;
-  top: 30%;
   text-align: center;
-  color: white;
+  color: #808080;
 
   > h5 {
-    font-size: 18px;
+    font-size: 22px;
   }
   > p {
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
   }
   > div {
-    width: 200px;
+    width: 300px;
     height: 50px;
     line-height: 50px;
     background-color: rgba(0, 0, 0, 0.581);
-    font-size: 16px;
+    font-size: 20px;
     color: white;
     text-align: center;
     position: absolute;
     cursor: pointer;
     font-weight: bold;
-    left: calc(50% - 200px / 2);
+    left: calc(50% - 300px / 2);
     border-radius: 50px;
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
@@ -1288,10 +1455,10 @@ div.carousel-item:nth-of-type(3) > div.carousel-caption {
   }
 }
 div.bottomSlider {
-  z-index: 9;
+  z-index: 99;
   width: 100%;
-  height: 50px;
-  line-height: 50px;
+  height: auto;
+  padding-top: 20px;
   position: relative;
   top: -80px;
   background-color: #f5f5f5;
@@ -1365,6 +1532,17 @@ div.new {
       height: auto;
     }
   }
+  > div > div.fiveStar {
+    position: absolute;
+    top: 90%;
+    > span {
+      color: rgb(128, 205, 208);
+      cursor: pointer;
+    }
+    > span:nth-of-type(6) {
+      color: gray;
+    }
+  }
   > div.a {
     position: relative;
 
@@ -1428,7 +1606,6 @@ div.new {
     div.img {
       > img {
         width: 93%;
-        height: 230px;
         // grid-column-start: 1;
         // grid-column-end: 2;
         border-radius: 7px;
@@ -1512,7 +1689,6 @@ div.new {
     div.img {
       > img {
         width: 93%;
-        height: 230px;
         // grid-column-start: 1;
         // grid-column-end: 2;
         border-radius: 7px;
@@ -1595,7 +1771,6 @@ div.new {
     div.img {
       > img {
         width: 93%;
-        height: 230px;
         // grid-column-start: 1;
         // grid-column-end: 2;
         border-radius: 7px;
@@ -1697,6 +1872,10 @@ div.offerTop {
   }
 }
 
+div.firstOffer{
+  display: none;
+}
+
 div.offer {
   width: 100%;
   display: grid;
@@ -1711,6 +1890,17 @@ div.offer {
     > img {
       width: auto;
       height: auto;
+    }
+  }
+  > div > div.fiveStar {
+    position: absolute;
+    top: 90%;
+    > span {
+      color: rgb(128, 205, 208);
+      cursor: pointer;
+    }
+    > span:nth-of-type(6) {
+      color: gray;
     }
   }
   > div.a {
@@ -2030,7 +2220,7 @@ div.offer {
 
   > div.d {
     position: relative;
-    left: 10px;
+    padding-left: 10px;
     > div:nth-of-type(1) {
       z-index: 9;
       width: 23%;
@@ -2102,14 +2292,14 @@ div.offer {
       }
       > p:nth-of-type(2) {
         position: relative;
-        bottom: 4%;
+        bottom: 20px;
         font-size: 15px;
         font-weight: 600;
         display: inline-block;
       }
       > p:nth-of-type(3) {
         position: relative;
-        bottom: 4%;
+        bottom: 20px;
         font-size: 15px;
         font-weight: 400;
         display: inline-block;
@@ -2306,6 +2496,17 @@ div.antioxidant {
       height: auto;
     }
   }
+  > div > div.fiveStar {
+    position: absolute;
+    top: 90%;
+    > span {
+      color: rgb(128, 205, 208);
+      cursor: pointer;
+    }
+    > span:nth-of-type(6) {
+      color: gray;
+    }
+  }
   > div.a {
     position: relative;
 
@@ -2335,7 +2536,6 @@ div.antioxidant {
     > div.img {
       > img {
         width: 93%;
-        height: 240px;
         // grid-column-start: 1;
         // grid-column-end: 2;
         border-radius: 7px;
@@ -2352,7 +2552,7 @@ div.antioxidant {
       line-height: 50px;
       text-align: center;
       position: absolute;
-      top: 45%;
+      top: 40%;
       right: 30px;
       box-shadow: 2px 2px 2px rgb(179, 179, 179);
       border-radius: 50%;
@@ -2425,7 +2625,6 @@ div.antioxidant {
     div.img {
       > img {
         width: 93%;
-        height: 240px;
         // grid-column-start: 1;
         // grid-column-end: 2;
         border-radius: 7px;
@@ -2442,7 +2641,7 @@ div.antioxidant {
       line-height: 50px;
       text-align: center;
       position: absolute;
-      top: 45%;
+      top: 40%;
       right: 30px;
       box-shadow: 2px 2px 2px rgb(179, 179, 179);
       border-radius: 50%;
@@ -2506,7 +2705,6 @@ div.antioxidant {
     > div.img {
       > img {
         width: 93%;
-        height: 240px;
         // grid-column-start: 1;
         // grid-column-end: 2;
         border-radius: 7px;
@@ -2523,7 +2721,7 @@ div.antioxidant {
       line-height: 50px;
       text-align: center;
       position: absolute;
-      top: 45%;
+      top: 40%;
       right: 30px;
       box-shadow: 2px 2px 2px rgb(179, 179, 179);
       border-radius: 50%;
@@ -3018,62 +3216,25 @@ div.standards {
 
 div.images {
   width: 100%;
-  display: grid;
-  grid-template-columns: 16.5% 16.5% 16.5% 16.5% 16.5% 16.5%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
   position: relative;
-  > img:nth-of-type(1) {
-    position: absolute;
-    top: 1100px;
-    left: 8%;
-    width: 150px;
-    height: 150px;
-  }
-  > img:nth-of-type(2) {
-    position: absolute;
-    top: 1100px;
-    left: 23%;
-    width: 150px;
-    height: 150px;
-  }
-  > img:nth-of-type(3) {
-    position: absolute;
-    top: 1100px;
-    left: 38%;
-    width: 150px;
-    height: 150px;
-  }
-  > img:nth-of-type(4) {
-    position: absolute;
-    top: 1100px;
-    left: 53%;
-    width: 150px;
-    height: 150px;
-  }
-  > img:nth-of-type(5) {
-    position: absolute;
-    top: 1100px;
-    left: 68%;
-    width: 150px;
-    height: 150px;
-  }
-  > img:nth-of-type(6) {
-    position: absolute;
-    top: 1100px;
-    left: 83%;
-    width: 150px;
-    height: 150px;
+  top: 1100px;
+  > img {
+    width: 16.5%;
   }
 }
 hr.follow {
   position: relative;
-  top: 1400px;
+  top: 1200px;
   width: 100%;
   height: 10px;
   color: lightgray;
 }
 div.follow {
   position: relative;
-  top: 1450px;
+  top: 1250px;
   display: grid;
   grid-template-columns: 40% 60%;
   > div.a {
@@ -3170,7 +3331,7 @@ div.gray {
   width: 100%;
   height: 250px;
   position: relative;
-  top: 1650px;
+  top: 1450px;
   display: grid;
   grid-template-columns: 33% 33% 33%;
   background-color: rgb(239, 239, 239);
@@ -3241,25 +3402,28 @@ div.gray {
     }
   }
 }
+div.grayMedia{
+  display: none;
+}
 
 div.end {
   width: 100%;
-  height: 2000px;
+  height: 1750px;
   > p.end {
     position: relative;
-    top: 1700px;
+    top: 1520px;
     text-align: center;
     font-size: 12px;
   }
   > p.end2 {
     position: relative;
-    top: 1720px;
+    top: 1540px;
     text-align: center;
     font-size: 12px;
   }
   > a.end {
     position: relative;
-    top: 1700px;
+    top: 1540px;
     left: 30%;
     font-size: 12px;
     color: rgba(0, 0, 0, 0.778);
@@ -3271,7 +3435,7 @@ div.end {
   }
   > a.end2 {
     position: relative;
-    top: 1700px;
+    top: 1540px;
     left: 33%;
     font-size: 12px;
     color: rgba(0, 0, 0, 0.778);
