--- a/scss/md/_menu.scss
+++ b/scss/md/_menu.scss
@@ -1196,7 +1196,7 @@ div.mediaMenuFullWidth {
   top: 60px;
   border-right: 2px solid rgb(189, 189, 189);
   z-index: 99;
-  overflow: scroll;
+  overflow-y: scroll;
   transition: 300ms;
   -webkit-transition: 300ms;
   -moz-transition: 300ms;
