--- a/scss/xs/_menu.scss
+++ b/scss/xs/_menu.scss
@@ -164,7 +164,8 @@ div.menu > nav > div:nth-of-type(3) {
       }
     }
     > div.shopping {
-      display: none;
+      // display: none;
+      overflow-y: scroll;
       font-family: oriflame;
       width: 350px;
       height: calc(100vh - 60px);
@@ -1197,7 +1198,7 @@ div.mediaMenuFullWidth {
   top: 60px;
   border-right: 2px solid rgb(189, 189, 189);
   z-index: 99;
-  overflow: scroll;
+  overflow-y: scroll;
   transition: 300ms;
   -webkit-transition: 300ms;
   -moz-transition: 300ms;
@@ -3045,7 +3046,7 @@ div.antioxidant {
       line-height: 40px;
       text-align: center;
       position: absolute;
-      top: 60%;
+      top: 50%;
       right: 20px;
       border-radius: 50%;
       background-color: white;
@@ -3140,7 +3141,7 @@ div.antioxidant {
       line-height: 40px;
       text-align: center;
       position: absolute;
-      top: 60%;
+      top: 50%;
       right: 20px;
       border-radius: 50%;
       background-color: white;
@@ -3224,7 +3225,7 @@ div.antioxidant {
       line-height: 40px;
       text-align: center;
       position: absolute;
-      top: 60%;
+      top: 50%;
       right: 20px;
       border-radius: 50%;
       background-color: white;
@@ -3474,13 +3475,14 @@ div.customer {
       font-size: 14px;
       font-weight: bold;
       display: inline-block;
+      padding-left: 2%;
     }
     > p:nth-of-type(2) {
       width: 80%;
       text-align: left;
       font-size: 13px;
       display: inline-block;
-      padding-left: 11%;
+      padding-left: 15%;
       padding-bottom: 20px;
     }
   }
@@ -3497,13 +3499,14 @@ div.customer {
       text-align: left;
       font-size: 14px;
       font-weight: bold;
+      padding-left: 2%;
     }
     > p:nth-of-type(2) {
       width: 80%;
       display: inline-block;
       text-align: left;
       font-size: 13px;
-      padding-left: 11%;
+      padding-left: 15%;
       padding-bottom: 20px;
     }
   }
@@ -3521,13 +3524,14 @@ div.customer {
       text-align: left;
       font-size: 14px;
       font-weight: bold;
+      padding-left: 2%;
     }
     > p:nth-of-type(2) {
       width: 80%;
       display: inline-block;
       text-align: left;
       font-size: 13px;
-      padding-left: 11%;
+      padding-left: 15%;
     }
   }
   > div:nth-of-type(4) {
@@ -3536,7 +3540,7 @@ div.customer {
     height: 35px;
     line-height: 35px;
     position: absolute;
-    bottom: 10px;
+    bottom: 20px;
     right: calc(50% - 220px / 2);
     font-size: 15px;
     font-weight: bold;
