--- a/scss/xxl/_menu.scss
+++ b/scss/xxl/_menu.scss
@@ -1510,7 +1510,7 @@ div.newTop {
   }
   > div {
     position: absolute;
-    right: 10px;
+    right: 7%;
     bottom: 10px;
     width: 10%;
     height: 50px;
@@ -1535,9 +1535,9 @@ div.newTop {
 }
 
 div.new {
-  width: 100%;
+  width: 88%;
   height: auto;
-  margin-top: 40px;
+  margin: 40px auto 0 auto;
   display: grid;
   grid-template-columns: 46% 18% 18% 18%;
   margin-bottom: 30px;
@@ -1591,7 +1591,7 @@ div.new {
       -o-border-radius: 50px;
       position: absolute;
       right: calc(50% - 270px / 2);
-      top: 330px;
+      bottom: 30px;
       cursor: pointer;
       &:hover {
         background-color: #c8c8c8aa;
@@ -1642,7 +1642,7 @@ div.new {
       line-height: 50px;
       text-align: center;
       position: absolute;
-      top: 45%;
+      top: 40%;
       right: 35px;
       box-shadow: 2px 2px 2px rgb(179, 179, 179);
       border-radius: 50%;
@@ -1726,7 +1726,7 @@ div.new {
       line-height: 50px;
       text-align: center;
       position: absolute;
-      top: 45%;
+      top: 40%;
       right: 35px;
       box-shadow: 2px 2px 2px rgb(179, 179, 179);
       border-radius: 50%;
@@ -1809,7 +1809,7 @@ div.new {
       line-height: 50px;
       text-align: center;
       position: absolute;
-      top: 45%;
+      top: 40%;
       right: 35px;
       box-shadow: 2px 2px 2px rgb(179, 179, 179);
       border-radius: 50%;
@@ -1836,7 +1836,7 @@ div.new {
         font-weight: 300;
       }
       > p:nth-of-type(1) {
-        font-size: 17px;
+        font-size: 16px;
         font-weight: 400;
       }
       > p:nth-of-type(2) {
@@ -1870,7 +1870,7 @@ div.offerTop {
   > div {
     z-index: 3;
     position: absolute;
-    left: 10px;
+    left: 7%;
     top: 80px;
     width: 12%;
     height: 45px;
@@ -1898,11 +1898,10 @@ div.firstOffer {
 }
 
 div.offer {
-  width: 100%;
+  width: 88%;
   display: grid;
   grid-template-columns: 18.5% 18.5% 18.5% 18.5% 25%;
-  margin-top: 120px;
-  margin-bottom: 100px;
+  margin: 120px auto 100px auto;
   position: relative;
 
   > div {
@@ -2336,15 +2335,18 @@ div.offer {
     left: 10px;
     > div:nth-of-type(1) {
       z-index: -1;
-      width: 190px;
-      height: 400px;
+      width: 380px;
+      height: 380px;
       background-color: #f0effc;
       position: absolute;
-      bottom: 30%;
-      right: 0;
-      border-bottom-left-radius: 190px;
-      border-top-left-radius: 190px;
-    }
+      bottom: 35%;
+      left: 0;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+}
 
     > div:nth-of-type(2) {
       position: absolute;
@@ -2397,6 +2399,8 @@ div.offer {
 }
 
 div.mustHave {
+  width: 88%;
+  margin: 0 auto;
   position: relative;
   display: grid;
   grid-template-columns: 55% 45%;
@@ -2407,15 +2411,18 @@ div.mustHave {
     }
     > div {
       z-index: -1;
-      width: 190px;
-      height: 400px;
+      width: 380px;
+      height: 380px;
       background-color: #f0effc;
       position: absolute;
       top: 40%;
-      left: 0;
-      border-bottom-right-radius: 190px;
-      border-top-right-radius: 190px;
-    }
+      right: 90%;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+}
   }
   > div:nth-of-type(2) {
     position: relative;
@@ -2481,7 +2488,7 @@ div.astaxanthin {
     line-height: 45px;
     position: absolute;
     top: 40%;
-    right: 2%;
+    right: 7%;
     font-size: 17px;
     text-align: center;
     border: 2px solid rgba(128, 128, 128, 0.869);
@@ -2503,11 +2510,11 @@ div.astaxanthin {
 }
 
 div.antioxidant {
-  width: 100%;
+  width: 88%;
   height: auto;
   display: grid;
   grid-template-columns: 46% 18% 18% 18%;
-  margin-bottom: 30px;
+  margin:0 auto 30px auto;
   position: relative;
   top: 120px;
   > div {
@@ -2520,7 +2527,7 @@ div.antioxidant {
   }
   > div > div.fiveStar {
     position: absolute;
-    top: 88%;
+    top: 90%;
     > span {
       color: rgb(128, 205, 208);
       cursor: pointer;
@@ -2575,7 +2582,7 @@ div.antioxidant {
       line-height: 50px;
       text-align: center;
       position: absolute;
-      top: 45%;
+      top: 40%;
       right: 35px;
       box-shadow: 2px 2px 2px rgb(179, 179, 179);
       border-radius: 50%;
@@ -2665,7 +2672,7 @@ div.antioxidant {
       line-height: 50px;
       text-align: center;
       position: absolute;
-      top: 45%;
+      top: 40%;
       right: 35px;
       box-shadow: 2px 2px 2px rgb(179, 179, 179);
       border-radius: 50%;
@@ -2746,7 +2753,7 @@ div.antioxidant {
       line-height: 50px;
       text-align: center;
       position: absolute;
-      top: 45%;
+      top: 40%;
       right: 35px;
       box-shadow: 2px 2px 2px rgb(179, 179, 179);
       border-radius: 50%;
@@ -2798,7 +2805,8 @@ p.beauty {
   font-size: 17px;
 }
 div.beauty {
-  width: 100%;
+  width: 88%;
+  margin: 0 auto;
   height: auto;
   display: grid;
   grid-template-columns: 50% 50%;
@@ -2819,7 +2827,7 @@ div.beauty {
     }
     > div:nth-of-type(1) {
       width: 48.5%;
-      height: 77%;
+      height: 75%;
       position: absolute;
       top: 0;
       left: 0;
@@ -2896,7 +2904,7 @@ div.beauty {
     }
     > div:nth-of-type(1) {
       width: 49.5%;
-      height: 79.5%;
+      height: 77.5%;
       position: absolute;
       top: 0;
       right: 0;
@@ -3246,7 +3254,8 @@ div.standards {
 }
 
 div.images {
-  width: 100%;
+  width: 88%;
+  margin: 0 auto;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
