--- a/scss/lg/_menu.scss
+++ b/scss/lg/_menu.scss
@@ -2455,7 +2455,7 @@
         position: absolute;
         left: 12%;
         top: 25%;
-        font-size: 35px;
+        font-size: 30px;
         font-weight: bold;
         color: #000000dd;
       }
@@ -2464,13 +2464,14 @@
         top: 50%;
         left: 12%;
         font-size: 14px;
+      padding-right: 30px;
       }
       div {
         width: 150px;
         height: 45px;
         line-height: 45px;
         position: absolute;
-        top: 75%;
+        top: 80%;
         left: 12%;
         font-size: 16px;
         text-align: center;
