--- a/scss/xl/_menu.scss
+++ b/scss/xl/_menu.scss
@@ -2441,6 +2441,8 @@ div.mustHave {
       top: 50%;
       left: 12%;
       font-size: 14px;
+      padding-right: 50px;
+
     }
     div {
       width: 150px;
