--- a/scss/xs/_menu.scss
+++ b/scss/xs/_menu.scss
@@ -198,7 +198,7 @@ div.menu > nav > div:nth-of-type(3) {
       }
       > h3 {
         text-align: center;
-        margin-top: 10%;
+        margin-top: 25%;
         font-size: 18px;
         font-weight: bold;
         color: rgba(0, 0, 0, 0.58);
@@ -211,7 +211,8 @@ div.menu > nav > div:nth-of-type(3) {
         height: 40px;
         line-height: 40px;
         margin-left: 25px;
-        margin-top: 15%;
+        margin-top: 30%;
+        margin-bottom: 10%;
         text-align: center;
         background-color: #5fc495;
         color: white;
