--- a/scss/xxl/_menu.scss
+++ b/scss/xxl/_menu.scss
@@ -2439,7 +2439,8 @@ div.mustHave {
       position: absolute;
       top: 50%;
       left: 12%;
-      font-size: 14px;
+      font-size: 16px;
+      padding-right: 50px;
     }
     div {
       width: 150px;
