--- a/scss/sm/_menu.scss
+++ b/scss/sm/_menu.scss
@@ -1038,7 +1038,7 @@
     left: 0;
     top: 60px;
     display: none;
-    overflow: scroll;
+    overflow-y: scroll;
     transition: 300ms;
     -webkit-transition: 300ms;
     -moz-transition: 300ms;
