--- a/scss/xs/_menu.scss
+++ b/scss/xs/_menu.scss
@@ -1036,7 +1036,7 @@ div.mediaSignIn {
   left: 0;
   top: 60px;
   display: none;
-  overflow: scroll;
+  overflow-y: scroll;
   transition: 300ms;
   -webkit-transition: 300ms;
   -moz-transition: 300ms;
